# visionatrix/routes/__init__.py
@@ -1,1 +1,10 @@
-from . import flows, other, settings, settings_comfyui, tasks, tasks_internal, workers
+from . import (
+    flows,
+    models,
+    other,
+    settings,
+    settings_comfyui,
+    tasks,
+    tasks_internal,
+    workers,
+)
